cambio error en método get